src/routes/web/pages/Loader/style.css
#loader {
    position: fixed;
  width: 100%;
  height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
background: #fff;
  z-index: 3;
  }

  .svg-c {
    position: absolute;
    transform: scale(4);
    will-change: opacity;
  }
  .svg-path {
    transform: rotate(-90deg);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 2;
    transition: all .01s;
  }
  
  .svg-back {
    position: absolute;
    top: 0;
    z-index: -1;
  }

  .checkmark-svg {
    position: absolute;
    transform-origin: 50% 50%;
    stroke-dasharray: 48;
    stroke-dashoffset: 48;
    
    
    
  }

  



  .loader-inner-c {
    position: absolute;
    font-family: 'El Messiri', sans-serif;
  }
  .loader-num {
    font-size: 48px;
    color: #404040;
    font-weight: 600;
    line-height: normal;
    margin: 0;
  }

  .header-c {
    position: relative;
    box-sizing: content-box;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

  }
  .letters-c {
    position: relative;
    display: flex;
    flex-direction: row;

  }
 .letter {
  font-family: 'El Messiri', sans-serif;
    color: #404040;
    font-size: 220px;
/* font-family: 'El Messiri', sans-serif; */
    font-weight: 400;
    opacity: 0;
    line-height: .8em;
    margin: 0;

}

#loader .subtitle {
  position: relative;
  font-family: 'Inter', sans-serif;
  margin-top: 12px;
  font-weight: 300;
  color: #404040;
  font-size: 18px;
}

.loader-text-c {
  position: absolute;
  bottom: calc(env(safe-area-inset-top) + 12vh);
}

.loader-text {
  font-size: 14px;
  color: #a6a6a6;
  font-weight: 300;

}
#loader .row-1 {
  box-sizing: content-box;
  display: flex;
  flex-direction: row;
  align-items:baseline;
  justify-content: center;
  flex: 1;

}
#loader .row-3 {
  box-sizing: content-box;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  flex: 8;
  width: 100vw;
 

}

@media only screen and (max-width: 720px) {
.letter {
  font-size: 140px;
}
  
}

